--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
 		</h2>
 
 		<p>
-			Successful societies and institutions recognize the need to record their history - this provides a way to review the past, find explanations for current behavior, and spot emerging trends. In 1996 <a href="http://en.wikipedia.org/wiki/Brewster_Kahle" target="_blank">Brewster Kahle</a> realized the cultural significance of the Internet and the need to record its history. As a result he founded the <a href="http://archive.org/" target="_blank">Internet Archive</a> which collects and permanently stores the Web's digitized content.
+			Successful societies and institutions recognize the need to record their history - this provides a way to review the past, find explanations for current behavior, and spot emerging trends. In 1996 <a href="https://en.wikipedia.org/wiki/Brewster_Kahle" target="_blank">Brewster Kahle</a> realized the cultural significance of the Internet and the need to record its history. As a result he founded the <a href="https://archive.org/" target="_blank">Internet Archive</a> which collects and permanently stores the Web's digitized content.
 		</p>
 
 		<p>
